squishing reported bugs

--- a/www/homepages/homepage.css
+++ b/www/homepages/homepage.css
@@ -1,35 +1,35 @@
 body { 
     margin: 0px;
     font-family:Verdana,Arial,Helvetica;
-	font-size:12px;
-	color:#000000;
-	padding:0px;
+    font-size:12px;
+    color:#000000;
+    padding:0px;
 }
 
-.homeTagline	{
-	text-align:center;
-	color:#002255; 
-	font-size:13px; 
-	font-style:italic; 
-	font-weight:bold; 
-	line-height:1.2; 
-	margin-left:15px; 
-	margin-right:15px; 
-	margin-top:3px; 
-	margin-bottom:5px;
+.homeTagline    {
+    text-align:center;
+    color:#002255; 
+    font-size:13px; 
+    font-style:italic; 
+    font-weight:bold; 
+    line-height:1.2; 
+    margin-left:15px; 
+    margin-right:15px; 
+    margin-top:3px; 
+    margin-bottom:5px;
 }
 
 .homeTitleBar {
-	text-align:center;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:28px;
-	color:#002255;
-	font-weight:bold;
-	width:100%;
-	border-color:#DFDFDF;
-	border-style:solid;
-	border-width:2px;
-	background-color:#F2F2F2;
+    text-align:center;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:28px;
+    color:#002255;
+    font-weight:bold;
+    width:100%;
+    border-color:#DFDFDF;
+    border-style:solid;
+    border-width:2px;
+    background-color:#F2F2F2;
 }
 
 .grayBG {background-color:#F9F9F9;}
@@ -44,24 +44,24 @@ body {
 } 
 
 .smaller {
-	font-family:Verdana, Arial, Helvetica, sans-serif;
-	font-size:smaller;font-size:85%; font-size:10px;}
+    font-family:Verdana, Arial, Helvetica, sans-serif;
+    font-size:smaller;font-size:85%; font-size:10px;}
 
-.imageHeader	{
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:12px;
-	color:#002255;
-	font-weight:bold;
-	margin:1px 2px;
-	vertical-align:text-bottom;
+.imageHeader    {
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:12px;
+    color:#002255;
+    font-weight:bold;
+    margin:1px 2px;
+    vertical-align:text-bottom;
 }
 
 /*
 
 /*:focus { -moz-outline-style: none; }*/
-a { outline:expression(hideFocus=‘true’); outline:0; }
+a {outline:0; }
 
-a.homePageBody:link {		
+a.homePageBody:link {       
 color: #1433c8;
 text-decoration: none;
 border-bottom-width: 1px;
@@ -96,22 +96,20 @@ padding-left: 2px;}
 
 a.homePageBody:active {
     color:#1433C8;
-	text-decoration:none;
-	border-bottom:da	shed 1px #000000;
-	padding: 0.1em 2px;}
-
-*/
+    text-decoration:none;
+    padding: 0.1em 2px;}
 
 dd.howDoI {
-	color:#000000;
-	text-decoration: none; 
-	font-family: Verdana, Arial, Helvetica, sans-serif;} 
+    color:#000000;
+    text-decoration: none; 
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+} 
 
 
 dl.howDoI {line-height:1.2;}
 
 p {
-	font-family:Verdana, Arial, Helvetica, sans-serif;
-	color:#000000;
-	font-size:12px;
+    font-family:Verdana, Arial, Helvetica, sans-serif;
+    color:#000000;
+    font-size:12px;
 }
